[package]
name = "helium_vm"
version = "0.4.5"
edition = "2021"

description = "An emulator for the Helium arhitecture."
authors = ["CoffeeLink <aron@coffeelink.hu>"]
license = "AGPL-3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
owo-colors = "4.0.0"
bitmatch = "0.1.1"
ansi-escapes = "0.2.0"